[Appeasement] Corrected instantiator of Boolean from String